# sports-betting-ai

./: .env.example  .gitignore  PROJECT.md  SESSION.md  pyproject.toml  requirements.txt
.codebuff/agents/: web-search-agent.md
config/: cfb.toml  golf.toml  golf_old.toml  kalshi.toml  mlb.toml  nascar.toml  nba.toml  nfl.toml  nhl.toml  soccer.toml  tennis.toml  ufc.toml  wnba.toml  worldcup.toml
data/: trade_tracker.db.backup_20260611_075623  wc_star_players.json
data/cfb_cache/: game_logs.parquet
data/golf_cache/: season_stats_v4.parquet
data/nba_cache/: game_logs_v14.parquet
reports/: 2026-06-11_0900.txt  2026-06-12_0900.txt  BestBets.md  latest.txt
research/: f5_research_questions.md  world_cup_nfl_research.md
scripts/: backtest_consensus_parlay.py  build_nba_correlations.py  check_mlb_cals_per_decile.py  counterfactual_mlb_no_betting.py  daily-report.sh  diag_nba_picks_raw_vs_cal.py  fit_mlb_beta_cal.py  fit_nba_beta_cal.py  fit_wnba_beta_cal.py  install-cron.sh  install-mlb-cron.sh  install-nba-finals-cron.sh  install-nfl-cron.sh  install-nhl-cron.sh  oos_test_nba_cal.py  paper_tonight_jun10.py  refit_mlb_beta_cal_live.py  refit_nba_beta_cal_live.py  refit_nhl_beta_cal_live.py  refit_wc_offset_2026.py  refit_wnba_beta_cal_live.py  send-report.py
src/: main.py
tests/: conftest.py  test_fotmob.py  test_fotmob_live.py  test_mlb_cal_diagnostic.py  test_nba_injuries.py  test_oos_mov.py  test_oracle_2026.py  test_populate_wc_lineups.py  test_preflight.py  test_refit_magnitude_guard.py  test_ufc_mov_cal.py  test_ufc_props.py  test_wc_star_impact.py
(+387 files in other folders)
