[project]
name = "sports-betting-ai"
version = "0.1.0"
description = "AI-driven sports betting engine for PrizePicks and Kalshi"
requires-python = ">=3.10"
dependencies = [
    "xgboost>=2.0.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.2.0",
    "requests>=2.28.0",
    "SQLAlchemy>=1.4.0",
    "toml>=0.10.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "joblib>=1.2.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
# Auto-discover tests in this directory without manual sys.path hacks.
# The conftest.py in tests/ adds the project root to sys.path so
# `from src.data.fotmob import …` works in any test file.
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
# Registered test markers — add new ones here to silence PytestUnknownMarkWarning.
# `live` is used by integration tests that hit external APIs (MLB Stats,
# The Odds API, FotMob). Run with `pytest --runlive tests/...`.
markers = [
    "live: live integration test that requires network + --runlive flag",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
